# sdf-representation

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  requirements.txt
configgen/: Readme.md  config_reader.py
datagenerator/: Readme.md  data_generator.py
dataloader/: load_data.py
evaluations/: Readme.md  compare_octree_dl.py  generate_gif.py  post_process.py
executor/: Readme.md  executor.py  executordistributed.py  trainer.py
model/: Readme.md  losses.py  networks.py
notebooks/: Readme.md  configs.ini  david_data_gen.ipynb
ops/: Readme.md
ops/DeepTrace/: CMakeLists.txt
ops/DeepTrace/sample_inputs/: config.txt
ops/DeepTrace/src/: deeptrace.cpp
ops/conversion_test/: CMakeLists.txt  difference.csv  input.csv  main.cpp  output.csv  run.sh  test_loading.cpp
tests/: test_config.ini  test_config.py
utils/: constants.py  files.py  inference_conversion.py  normal_comparison.py  pickling.py  visualize_errors.py
